--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "@mantine/hooks": "7.6.1",
     "@next/bundle-analyzer": "^14.1.3",
     "@tabler/icons-react": "^3.0.0",
+    "@tanstack/react-query": "^5.28.6",
+    "axios": "^1.6.8",
     "next": "14.1.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
